...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="4dp">

        <ImageButton
            android:id="@+id/pause"
            style="@style/MediaButton.Play" />

        <TextView
            android:id="@+id/time_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
            android:textColor="@color/dim_foreground_dark"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:text="13:45" />

        <ImageButton
            android:id="@+id/fullscreen"
            style="@style/MediaButton.Fullscreen" />
    </LinearLayout>
</LinearLayout>
