<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

    <com.hustunique.parsingplayer.player.view.TextureRenderView
        android:id="@+id/texture_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.hustunique.parsingplayer.player.view.ControllerView
        android:id="@+id/controller_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>