<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hustunique.jianguo.sample.MainActivity">

    <com.hustunique.parsingplayer.player.view.ParsingVideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="200dp"/>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Play"/>
    </FrameLayout>

</LinearLayout>
